--- a/erlang/rebar.conf
+++ b/erlang/rebar.conf
@@ -16,7 +16,7 @@
 ]}.
 
 %% eunit:test(Tests)
-{eunit_tests, [{application, beer_song}]}.
+{eunit_tests, []}.
 %% Options for eunit:test(Tests, Opts)
 {eunit_opts, [verbose]}.
 
